--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,10 @@ body {
   text-align: center; }
 
 .footer {
+  height: 115px;
   padding: 35px 0;
-  background-color: white; }
+  background-color: white;
+  box-sizing: border-box; }
 
 .footer-column {
   float: left;
@@ -182,6 +184,7 @@ body {
   background-color: #766357; }
 
 .bottom-section {
+  height: 588px;
   background: white url("../img/static-map.jpg"); }
   .bottom-section form {
     width: 569px;
@@ -192,7 +195,7 @@ body {
     /* tmp */ }
 
 .footer.footer--index {
-  margin-top: 78px;
+  margin-top: -115px;
   background-color: rgba(255, 255, 255, 0.9); }
 
 .search-form {
