--- a/css/_index.scss
+++ b/css/_index.scss
@@ -31,7 +31,7 @@
   padding-bottom: 50px;
 
   text-align: center;
-  background-color: white;
+  background-color: $white-color;
 }
 
 .big-feature {
@@ -44,12 +44,31 @@
   .feature {
     width: 34%;
     height: 100%;
-    background-color: #81b3d2;
+    background-color: $light-blue-color;
   }
 
   .feature__name {
-    color: white;
+    margin-top: 50px;
+
+    color: $white-color;
   }
+
+
+}
+
+.feature__name {
+  display: block;
+  width: 180px;
+  margin: 0 auto 30px;
+}
+
+.feature__number {
+  margin-bottom: 30px;
+}
+
+.feature__description {
+  width: 78%;
+  margin: 0 auto;
 }
 
 .big-feature--real-life .feature {
@@ -99,7 +118,7 @@
   padding-top: 60px;
   padding-bottom: 85px;
   margin: 0;
-  background-color: white;
+  background-color: $white-color;
 }
 
 .feature-list {
@@ -109,14 +128,14 @@
   padding-bottom: 65px;
   margin: 0;
 
-  background-color: #eeeeee;
+  background-color: $light-gray;
 }
 
 .form-intro {
   padding-top: 55px;
   text-align: center;
 
-  background-color: white;
+  background-color: $white-color;
 }
 
 .form-intro__header {
@@ -138,15 +157,36 @@
 
 .bottom-section {
   height: 588px;
-  background: white url("../img/static-map.jpg");
+  background: $white-color url("../img/static-map.jpg");
 
   form {
-    width: 569px;
+    width: 568px;
     height: 395px;
+    padding: 55px;
     margin: 0 auto;
 
-    background-color: white;
+    background-color: $white-color;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* tmp */
+    box-sizing: border-box;
+
+    .column-1 {
+      display: inline-block;
+      width: 112px;
+    }
+
+    .date-field {
+      width: 340px;
+      margin-bottom: 30px;
+      box-sizing: border-box;
+    }
+
+    .from-submit {
+      width: 458px;
+      height: 48px;
+
+      background-color: $light-blue-color;
+      border: 0;
+    }
   }
 }
 
