--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,10 @@
 $black: #000;
+$black-color: #000;
+$white-color: #fff;
+$light-blue-color: #81b3d2;
+$blue-color-color: #669ec0;
+$dark-blue-color: #5496bd;
+$light-gray: #eee;
 
 $footer-height: 115px;
 
@@ -7,7 +13,7 @@ body {
   font-size: 14px;
   font-weight: normal;
   line-height: 21px;
-  color: $black;
+  color: $black-color;
   text-transform: uppercase;
 
   /*background: #ededed;*/
@@ -32,7 +38,7 @@ body {
   font-size: 21px;
   font-weight: bold;
   line-height: 26px;
-  color: $black;
+  color: $black-color;
 }
 
 .feature__name,
@@ -41,7 +47,7 @@ body {
   font-size: 21px;
   font-weight: bold;
   line-height: 21px;
-  color: $black;
+  color: $black-color;
 }
 
 .main {
@@ -58,7 +64,7 @@ body {
   margin: 0;
 
   font-size: 0;
-  background-color: white;
+  background-color: $white-color;
 
   > li {
     display: inline-block;
@@ -102,7 +108,7 @@ body {
 
   height: $footer-height;
   padding: 35px 0;
-  background-color: white;
+  background-color: $white-color;
   box-sizing: border-box;
 }
 
