--- a/css/normalize.css
+++ b/css/normalize.css
@@ -7,8 +7,9 @@
 
 html {
   font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
+
   -webkit-text-size-adjust: 100%; /* 2 */
+      -ms-text-size-adjust: 100%; /* 2 */
 }
 
 /**
@@ -30,16 +31,19 @@ body {
 
 article,
 aside,
-details, /* 1 */
+details,
+/* 1 */
 figcaption,
 figure,
 footer,
 header,
-main, /* 2 */
+main,
+/* 2 */
 menu,
 nav,
 section,
-summary { /* 1 */
+summary {
+  /* 1 */
   display: block;
 }
 
@@ -76,7 +80,8 @@ progress {
  * 1. Add the correct display in IE.
  */
 
-template, /* 1 */
+template,
+/* 1 */
 [hidden] {
   display: none;
 }
@@ -91,6 +96,7 @@ template, /* 1 */
 
 a {
   background-color: transparent; /* 1 */
+
   -webkit-text-decoration-skip: objects; /* 2 */
 }
 
@@ -113,9 +119,10 @@ a:hover {
  */
 
 abbr[title] {
-  border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
   text-decoration: underline dotted; /* 2 */
+
+  border-bottom: none; /* 1 */
 }
 
 /**
@@ -150,8 +157,9 @@ dfn {
  */
 
 h1 {
-  font-size: 2em;
   margin: 0.67em 0;
+
+  font-size: 2em;
 }
 
 /**
@@ -159,8 +167,9 @@ h1 {
  */
 
 mark {
-  background-color: #ff0;
-  color: #000;
+  color: #000000;
+
+  background-color: #ffff00;
 }
 
 /**
@@ -178,9 +187,10 @@ small {
 
 sub,
 sup {
+  position: relative;
+
   font-size: 75%;
   line-height: 0;
-  position: relative;
   vertical-align: baseline;
 }
 
@@ -223,8 +233,8 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
+  font-family: monospace, monospace; /* 1 */
 }
 
 /**
@@ -258,8 +268,9 @@ button,
 input,
 select,
 textarea {
-  font: inherit; /* 1 */
   margin: 0; /* 2 */
+
+  font: inherit; /* 1 */
 }
 
 /**
@@ -276,7 +287,8 @@ optgroup {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -286,7 +298,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
@@ -297,7 +310,8 @@ select { /* 1 */
  */
 
 button,
-html [type="button"], /* 1 */
+html [type="button"],
+/* 1 */
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button; /* 2 */
@@ -311,8 +325,9 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-  border-style: none;
   padding: 0;
+
+  border-style: none;
 }
 
 /**
@@ -331,9 +346,10 @@ button:-moz-focusring,
  */
 
 fieldset {
-  border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
+
+  border: 1px solid #c0c0c0;
 }
 
 /**
@@ -344,11 +360,12 @@ fieldset {
  */
 
 legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
   display: table; /* 1 */
+  box-sizing: border-box; /* 1 */
   max-width: 100%; /* 1 */
   padding: 0; /* 3 */
+
+  color: inherit; /* 2 */
   white-space: normal; /* 1 */
 }
 
@@ -386,8 +403,9 @@ textarea {
  */
 
 [type="search"] {
-  -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
+
+  -webkit-appearance: textfield; /* 1 */
 }
 
 /**
@@ -405,6 +423,7 @@ textarea {
 
 ::-webkit-input-placeholder {
   color: inherit;
+
   opacity: 0.54;
 }
 
@@ -414,6 +433,7 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
+
+  -webkit-appearance: button; /* 1 */
 }
