--- a/css/src/catalog/_search-form.scss
+++ b/css/src/catalog/_search-form.scss
@@ -3,7 +3,7 @@
 
   box-sizing: border-box;
   min-height: 217px;
-  padding: 25px 6% 0 6%;
+  padding: 27px 6% 0 6%;
 
   color: $white-color;
 
@@ -11,8 +11,8 @@
 
   &__infrastructure {
     float: left;
-    width: 216.11px;
-    margin-right: 3.24%;
+    width: 218px;
+    margin-right: 3.4%;
   }
 
   &__housing-type {
@@ -22,11 +22,12 @@
 
   &__price {
     float: right;
-    width: 30%;
+    width: 33.3%;
+    max-width: 317px;
   }
 
   .field-title {
-    margin-bottom: 9px;
+    margin-bottom: 10px;
 
     font-weight: 600;
     font-size: 16px;
@@ -38,8 +39,8 @@
   position: relative;
 
   display: block;
-  margin: 26px 0;
-  padding-left: 40px;
+  margin: 25px 0;
+  padding-left: 41px;
 
   input {
     display: none;
