--- a/css/src/_index.scss
+++ b/css/src/_index.scss
@@ -7,7 +7,7 @@
 .map-section {
   height: 588px;
 
-  background: #eeeeee url("../img/static-map.jpg");
+  background: #eeeeee url("../img/static-map.jpg") center center;
 }
 
 .footer.footer--index {
