--- a/css/src/index/_main-header.scss
+++ b/css/src/index/_main-header.scss
@@ -31,8 +31,7 @@
     width: 100%;
     height: 60px;
 
-    background: transparent url("../img/index/big-header-background__bottom-pattern.png") no-repeat;
-    background-position-y: bottom;
+    background: transparent url("../img/index/big-header-background__bottom-pattern.png") no-repeat 0 bottom;
     background-size: 100% auto;
   }
 }
