--- a/css/src/catalog/_filter-range.scss
+++ b/css/src/catalog/_filter-range.scss
@@ -101,13 +101,13 @@
 }
 
 .range-toggle-max {
-  left: 80%;
+  left: 79.5%;;
 }
 
 .btn-transparent {
   display: block;
   box-sizing: border-box;
-  width: 138px;
+  width: 137px;
   margin: 0 auto;
   padding: 6px 35px;
 
