--- a/css/style.css
+++ b/css/style.css
@@ -69,26 +69,26 @@ body {
   background-color: #503e33;
 }
 
-.social-btn::before, .htmlacademy-logo::before, .index-form__date-in::after, .index-form__date-out::after, .capacity .count-inc::after,
+.social-btn::before, .htmlacademy-logo::before, .calendar-icon, .capacity .count-inc::after,
 .capacity .count-dec::after, .checkbox__indicator, .sort-dir__link, .catalog-item__star::before {
   display: block;
   background-image: url("../img/sprites.png");
   background-repeat: no-repeat;
 }
 
-.index-form__date-in::after, .index-form__date-out::after {
+.calendar-icon {
   width: 21px;
   height: 22px;
   background-position: -4px -4px;
 }
 
-.index-form__date-in:active:hover::after, .index-form__date-out:active:hover::after {
+.calendar-icon:hover:active {
   width: 21px;
   height: 22px;
   background-position: -33px -4px;
 }
 
-.index-form__date-in:hover::after, .index-form__date-out:hover::after {
+.calendar-icon:hover {
   width: 21px;
   height: 22px;
   background-position: -62px -4px;
@@ -638,13 +638,6 @@ body {
   margin-bottom: 29px;
 }
 
-.index-form__date-in::after, .index-form__date-out::after {
-  content: "";
-  position: absolute;
-  top: 8px;
-  right: 9px;
-}
-
 .index-form .date-field {
   box-sizing: border-box;
   width: 346px;
@@ -665,6 +658,12 @@ body {
 
 .index-form .index-form__persons {
   margin-bottom: 55px;
+}
+
+.calendar-icon {
+  position: absolute;
+  top: 8px;
+  right: 9px;
 }
 
 .capacity {
@@ -804,18 +803,18 @@ body {
 .catalog-header__sort-field {
   float: left;
   margin-top: 5px;
-  font-size: 11px;
+  font-size: 12px;
 }
 
 .sort-field {
   display: inline;
-  padding-left: 44px;
+  padding-left: 36px;
   list-style: none;
 }
 
 .sort-field__item {
   display: inline;
-  margin-right: 33px;
+  margin-right: 30px;
 }
 
 .sort-field__link {
@@ -937,13 +936,13 @@ body {
 }
 
 .range-toggle-max {
-  left: 80%;
+  left: 79.5%;
 }
 
 .btn-transparent {
   display: block;
   box-sizing: border-box;
-  width: 138px;
+  width: 137px;
   margin: 0 auto;
   padding: 6px 35px;
   font: inherit;
@@ -1063,6 +1062,15 @@ body {
 
 img[src*="souvenirs"] {
   transform: translate(0, -4px);
+}
+
+@media (min-width: 950px) {
+  .filter-range .field-title {
+    margin-left: -10px;
+  }
+  .btn-transparent {
+    margin-left: 84px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
