--- a/css/src/global/_top-panel.scss
+++ b/css/src/global/_top-panel.scss
@@ -13,9 +13,10 @@
 .main-nav__item {
   display: inline-block;
   width: 20%;
-  padding: 17px 0;
+  padding: 14px 0;
 
   font-size: 14px;
+  line-height: 26px;
   vertical-align: top;
   text-align: center;
 
@@ -77,5 +78,3 @@
     transform: translate(-50%, 0);
   }
 }
-
-
