--- a/css/src/catalog/_search-form.scss
+++ b/css/src/catalog/_search-form.scss
@@ -29,7 +29,7 @@
   .field-title {
     margin-bottom: 10px;
 
-    font-weight: 600;
+    font-weight: bold;
     font-size: 16px;
     line-height: 21px;
   }
