--- a/css/src/index/_main-desc.scss
+++ b/css/src/index/_main-desc.scss
@@ -7,7 +7,8 @@
   background-color: $white-color;
 
   &__header {
-    margin: 0 0 27px;
+    width: 440px;
+    margin: 0 auto 27px;
 
     font-weight: bold;
     font-size: 21px;
