--- a/css/style.css
+++ b/css/style.css
@@ -233,8 +233,9 @@ body {
 .main-nav__item {
   display: inline-block;
   width: 20%;
-  padding: 17px 0;
+  padding: 14px 0;
   font-size: 14px;
+  line-height: 26px;
   vertical-align: top;
   text-align: center;
 }
@@ -308,10 +309,12 @@ body {
 }
 
 .footer__social {
+  height: 48px;
   font-size: 0;
 }
 
 .footer__hashtag {
+  display: inline-block;
   margin-top: 12px;
   font-weight: bold;
   font-size: 21px;
@@ -337,6 +340,7 @@ body {
   height: 48px;
   margin: 0 3px;
   font-size: 0;
+  vertical-align: top;
   background-color: #81b3d2;
 }
 
@@ -413,7 +417,8 @@ body {
 }
 
 .main-desc__header {
-  margin: 0 0 27px;
+  width: 440px;
+  margin: 0 auto 27px;
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
@@ -431,10 +436,6 @@ body {
   float: left;
   width: 66.6%;
   height: 100%;
-}
-
-.big-feature--real-life .feature-photo {
-  float: right;
 }
 
 .feature-photo__img {
@@ -463,10 +464,6 @@ body {
   float: left;
   width: 33.33%;
   text-align: center;
-}
-
-.big-feature--real-life .feature {
-  float: right;
 }
 
 .feature__name {
@@ -606,6 +603,7 @@ body {
 .index-form label {
   display: inline-block;
   font-weight: bold;
+  line-height: 26px;
   text-align: left;
 }
 
@@ -613,6 +611,7 @@ body {
   height: 38px;
   font: inherit;
   font-weight: bold;
+  line-height: 26px;
   text-transform: uppercase;
   background-color: #f2f2f2;
   border: 0;
@@ -664,6 +663,9 @@ body {
   position: absolute;
   top: 8px;
   right: 9px;
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
 
 .capacity {
@@ -697,9 +699,11 @@ body {
   position: absolute;
 }
 
-.capacity .count-inc:hover,
-.capacity .count-dec:hover {
+.capacity .count-inc:hover, .capacity .count-inc:focus,
+.capacity .count-dec:hover,
+.capacity .count-dec:focus {
   background-color: #ebebeb;
+  outline: none;
 }
 
 .capacity .count-inc {
@@ -757,7 +761,7 @@ body {
 
 .search-form .field-title {
   margin-bottom: 10px;
-  font-weight: 600;
+  font-weight: bold;
   font-size: 16px;
   line-height: 21px;
 }
@@ -802,7 +806,7 @@ body {
 
 .catalog-header__sort-field {
   float: left;
-  margin-top: 5px;
+  margin-top: 4px;
   font-size: 12px;
 }
 
@@ -810,6 +814,7 @@ body {
   display: inline;
   padding-left: 36px;
   list-style: none;
+  line-height: 18px;
 }
 
 .sort-field__item {
@@ -818,24 +823,28 @@ body {
 }
 
 .sort-field__link {
-  color: #b2b2b2;
+  color: black;
   text-decoration: none;
   border-bottom: 1px dotted #81b3d2;
+  opacity: 0.3;
 }
 
 .sort-field__link:hover {
   color: #81b3d2;
   border-bottom: 1px dotted #81b3d2;
+  opacity: 1;
 }
 
 .sort-field__link:active {
   color: #000000;
   border-bottom: 0;
+  opacity: 1;
 }
 
 .sort-field__link--active {
   color: #81b3d2;
   border-bottom: 0;
+  opacity: 1;
 }
 
 .catalog-header__sort-dir {
@@ -893,6 +902,7 @@ body {
   width: 45px;
   margin: 0;
   font: inherit;
+  line-height: 21px;
   color: inherit;
   background: none;
   border: none;
@@ -1070,6 +1080,24 @@ img[src*="souvenirs"] {
   }
   .btn-transparent {
     margin-left: 84px;
+  }
+}
+
+@media (max-width: 800px) {
+  .main-header {
+    background-size: 100%;
+  }
+  .feature--big .feature__name {
+    margin-top: 47px;
+  }
+  .feature--big .feature__description {
+    width: 75%;
+  }
+  .range-controls {
+    margin-left: 5px;
+  }
+  .range-toggle-max {
+    left: 71%;
   }
 }
 
