--- a/css/src/global/_footer.scss
+++ b/css/src/global/_footer.scss
@@ -26,6 +26,7 @@
 
     font-weight: bold;
     font-size: 21px;
+    vertical-align: baseline;
     color: $black-color;
     text-decoration: none;
   }
