--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -89,4 +89,8 @@ img[src*="souvenirs"] {
   .range-toggle-max {
     left: 71%;
   }
+
+  .filter-range .field-title {
+    margin-left: 5px;
+  }
 }
