--- a/css/src/index/_index-form-block.scss
+++ b/css/src/index/_index-form-block.scss
@@ -57,6 +57,7 @@
 
     font-weight: bold;
     line-height: 26px;
+    vertical-align: baseline;
     text-align: left;
   }
 
@@ -85,6 +86,8 @@
   .column-1 {
     display: inline-block;
     width: 108px;
+
+    vertical-align: baseline;
   }
 
   &__date-in,
@@ -146,6 +149,8 @@
 
   display: inline-block;
 
+  vertical-align: baseline;
+
   &__input {
     box-sizing: border-box;
     width: 38px;
@@ -165,6 +170,7 @@
     height: 38px;
 
     font-size: 0;
+    vertical-align: baseline;
 
     background-color: #f2f2f2;
     border: 0;
