--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,7 @@ body {
   margin-top: 12px;
   font-weight: bold;
   font-size: 21px;
+  vertical-align: baseline;
   color: #000000;
   text-decoration: none;
 }
@@ -604,6 +605,7 @@ body {
   display: inline-block;
   font-weight: bold;
   line-height: 26px;
+  vertical-align: baseline;
   text-align: left;
 }
 
@@ -630,6 +632,7 @@ body {
 .index-form .column-1 {
   display: inline-block;
   width: 108px;
+  vertical-align: baseline;
 }
 
 .index-form__date-in, .index-form__date-out {
@@ -671,6 +674,7 @@ body {
 .capacity {
   position: relative;
   display: inline-block;
+  vertical-align: baseline;
 }
 
 .capacity__input {
@@ -689,6 +693,7 @@ body {
   width: 38px;
   height: 38px;
   font-size: 0;
+  vertical-align: baseline;
   background-color: #f2f2f2;
   border: 0;
 }
@@ -730,6 +735,7 @@ body {
 }
 
 .footer.footer--index {
+  position: relative;
   margin-top: -115px;
   background-color: rgba(255, 255, 255, 0.9);
 }
@@ -778,6 +784,7 @@ body {
   top: -2px;
   left: 0;
   display: inline-block;
+  vertical-align: baseline;
 }
 
 .checkbox:hover {
@@ -1005,6 +1012,7 @@ body {
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
+  vertical-align: baseline;
   color: black;
   text-decoration: none;
 }
@@ -1020,6 +1028,7 @@ body {
 .catalog-item__type {
   display: inline-block;
   width: 112px;
+  vertical-align: baseline;
   color: #333333;
 }
 
@@ -1048,6 +1057,7 @@ body {
 }
 
 .catalog-item__star-block {
+  height: 25px;
   margin-top: 4px;
   font-size: 0;
   text-align: right;
@@ -1057,6 +1067,7 @@ body {
   display: inline-block;
   margin-left: 6px;
   font-size: 0;
+  vertical-align: baseline;
 }
 
 .catalog-item__star::before {
@@ -1064,7 +1075,7 @@ body {
 }
 
 .catalog-item__rating {
-  margin-top: 26px;
+  margin-top: 39px;
   padding: 3px 12px 3px 15px;
   color: #666666;
   background-color: #f2f2f2;
@@ -1098,6 +1109,9 @@ img[src*="souvenirs"] {
   }
   .range-toggle-max {
     left: 71%;
+  }
+  .filter-range .field-title {
+    margin-left: 5px;
   }
 }
 
