--- a/css/style.css
+++ b/css/style.css
@@ -815,6 +815,7 @@ body {
   float: left;
   margin-top: 4px;
   font-size: 12px;
+  line-height: 18px;
 }
 
 .sort-field {
@@ -830,28 +831,24 @@ body {
 }
 
 .sort-field__link {
-  color: black;
+  color: rgba(0, 0, 0, 0.3);
   text-decoration: none;
   border-bottom: 1px dotted #81b3d2;
-  opacity: 0.3;
 }
 
 .sort-field__link:hover {
   color: #81b3d2;
   border-bottom: 1px dotted #81b3d2;
-  opacity: 1;
 }
 
 .sort-field__link:active {
   color: #000000;
   border-bottom: 0;
-  opacity: 1;
 }
 
 .sort-field__link--active {
   color: #81b3d2;
   border-bottom: 0;
-  opacity: 1;
 }
 
 .catalog-header__sort-dir {
