Установлен vertical-align

--- a/css/src/catalog/_filter-range.scss
+++ b/css/src/catalog/_filter-range.scss
@@ -131,10 +131,12 @@
 
 .min-price-title {
   display: inline-block;
+  vertical-align: baseline;
   margin-left: -15px;
 }
 
 .max-price-title {
   display: inline-block;
+  vertical-align: baseline;
   margin-left: -25px;
 }
